--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Mobile App</title>
+  <title>Versailles UMC App</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Welcome to My Mobile App!</h1>
-  <p>This app is running as a PWA on GitHub Pages.</p>
+  <div class="hero">
+    <h1>Welcome to Versailles UMC</h1>
+    <p>Stay connected, wherever you are.</p>
+    <div class="buttons">
+      <a href="https://youtube.com" class="btn">Watch Live</a>
+      <a href="https://sites.google.com/view/vumc-connect/give?authuser=0" class="btn">Give Online</a>
+      <a href="https://sites.google.com/view/vumc-connect/check-in?authuser=0" class="btn">Check In</a>
+    </div>
+  </div>
+  <footer>
+    <p>&copy; 2025 Versailles UMC • Versailles, KY</p>
+  </footer>
   <script src="app.js"></script>
 </body>
 </html>
