--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Stay connected, wherever you are.</p>
     <div class="buttons">
       <a href="https://youtube.com" class="btn">Watch Live</a>
-      <a href="https://sites.google.com/view/vumc-connect/give?authuser=0" class="btn">Give Online</a>
+      <a href="https://github.com/vumc-media/vumc-app/blob/acd777a3152025eec5615d73fd16bf28f00d9680/give" class="btn">Give Online</a>
       <a href="https://sites.google.com/view/vumc-connect/check-in?authuser=0" class="btn">Check In</a>
     </div>
   </div>
